# P2Pro-Viewer

./: .gitignore  .releaserc  60-p2pro.rules  CHANGELOG.md  CMakeLists.txt  README.md  bundle_macos.sh  main.py  package.json  requirements.txt
.github/workflows/: release.yml
P2Pro/: P2Pro_cmd.py  video.py
Resources/: P2ProViewer.icns
src/: AVFoundationVideoSource.hpp  AVFoundationVideoSource.mm  CameraWindow.cpp  CameraWindow.hpp  ColorConversion.cpp  ColorConversion.hpp  Icons.hpp  LinuxAdapter.cpp  LinuxAdapter.hpp  MacOSAdapter.cpp  MacOSAdapter.hpp  P2Pro.cpp  P2Pro.hpp  Scaler.cpp  Scaler.hpp  USBAdapter.hpp  V4L2VideoSource.cpp  V4L2VideoSource.hpp  VideoRecorder.cpp  VideoRecorder.hpp  VideoRecorder_ffmpeg.cpp  VideoRecorder_mac.mm  main.cpp
tools/: appicontool.cpp  icongen.cpp
